--- a/style.css
+++ b/style.css
@@ -16,9 +16,6 @@ header h1 {
   margin-top: 35px;
 }
 
-nav{
-  
-}
 nav a {
   text-decoration: none;
   color: white;
@@ -80,6 +77,28 @@ section h2 {
 }
 #links a:hover{
     color: rgb(157, 157, 184);
+}
+form{
+  
+}
+.block {
+  display: block;
+  margin: 10px auto;
+  width: 300px;
+  height: 50px;
+  text-align: center;
+  border-radius: 5px;
+  font-size: 18px;
+  font-family: Helvetica, Arial, sans-serif;
+  background-color: rgba(19, 30, 37, 0.8);
+  border: 2px solid rgb(210, 180, 140);;
+}
+.txt{
+  padding-top: 20px;
+  height: 150px;
+}
+p{
+  font-size: 20px;
 }
 
 
